# kalyx

./: .env.example  .gitignore  DEMO.md  README.md  launcher  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: API_ENDPOINTS.md  ARCHITECTURE.md  CONFIGURATION.md  DETECTION_ENGINE.md  TESTING_SUMMARY.md  THREAT_MODEL.md
frontend/: .gitignore  angular.json  package-lock.json  package.json  proxy.conf.json  tsconfig.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/core/api/: kalyx-api.config.ts  kalyx-api.service.spec.ts  kalyx-api.service.ts
frontend/src/app/core/models/: alert.model.ts  (+6 more)
frontend/src/environments/: environment.ts
kalyx/: cli.py
kalyx/anchor/: __init__.py  api.py  storage.py
kalyx/api/: __init__.py  app.py  dashboard.html  main.py
kalyx/api/static/: style.css
kalyx/cli/: __init__.py  app.py
kalyx/core/: alerts.py  chain.py  detector.py  normalize.py  verify.py
kalyx/engine/: enrichment.py  ingest_execsnoop.py  ingest_execsnoop_live.py  parser.py
kalyx/models/: __init__.py  schema.py
kalyx/services/: __init__.py  anchor_client.py  detection.py  ledger.py  pipeline.py
kalyx/tests/: test_alert_persistence.py  test_anchor_service.py  test_anchor_status.py  test_api_auth.py  test_api_endpoints.py  test_checkpoint_integrity.py  test_cli_anchor.py  test_detection_rules.py  test_ingestion_trust_gate.py  test_ledger_corruption.py  test_ledger_integrity.py  test_pipeline_validation.py
reports/: ledger_export.json  ledger_export_tampered.json
(+19 files in other folders)
