[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalyx"
version = "0.1.0"
description = "Backend-driven execution integrity platform with deterministic verification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
]

[project.scripts]
kalyx = "kalyx.cli:main"
kalyx-api = "kalyx.api.app:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["kalyx*"]

[tool.setuptools.package-data]
"kalyx.api" = ["dashboard.html", "static/*.css"]
