[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalyx"
version = "0.6.1"
description = "Deterministic tamper-evident execution logging platform."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
]

[project.scripts]
kalyx = "kalyx.cli.app:main"
kalyx-api = "kalyx.api.main:run"
kalyx-anchor = "kalyx.anchor.api:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["kalyx*"]

[tool.setuptools.package-data]
"kalyx.api" = [
  "dashboard.html",
  "static/*.css",
]
